--- a/rikser/package.json
+++ b/rikser/package.json
@@ -29,6 +29,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.1"
+    "electron-squirrel-startup": "^1.0.1",
+    "punycode": "^2.3.1"
   }
 }
