--- a/rikser-browser/package.json
+++ b/rikser-browser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rikser-browser",
-  "productName": "rikser-browser",
+  "productName": "rikser browser",
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": "src/index.js",
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
     "@electron-forge/maker-deb": "^7.4.0",
+    "@electron-forge/maker-dmg": "^7.4.0",
     "@electron-forge/maker-rpm": "^7.4.0",
     "@electron-forge/maker-squirrel": "^7.4.0",
     "@electron-forge/maker-zip": "^7.4.0",
@@ -30,5 +31,48 @@
   "license": "MIT",
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1"
+  },
+  "Build": {
+    "appId": "com.swifterhtmler.rikserbrowser",
+    "files": "!build-assets${/*}"
+  },
+  "config": {
+    "forge": {
+      "packagerConfig": {},
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-dmg",
+          "config": {
+            "format": "ULFO"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {
+            "options": {
+              "productName": "rikser-browser"
+            }
+          }
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {
+            "options": {
+              "productName": "rikser-browser"
+            }
+          }
+        }
+      ]
+    }
   }
 }
